# UniversalRuntime

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.md  Makefile  README.md  SECURITY.md  SOURCES.md  alembic.ini  buf.gen.yaml  opencode.json  pyproject.toml
.github/: pull_request_template.md  quality-fix.pending
.github/workflows/: ci.yml  quality-fix-once.yml
.opencode/skills/: README.md
.serena/: project.yml
container/: Dockerfile  Dockerfile.agent-base  README.md  healthcheck.py
contracts/a2a/: A2A_MAPPING.md
contracts/config/: runtime-application.schema.json
contracts/database/: SCHEMA_CONTRACT.md
contracts/events/: EVENT_CATALOG.md  runtime-event-v1.schema.json
contracts/kafka/: TOPIC_CONTRACT.md
contracts/openapi/: COMPATIBILITY_SCOPE.json  README.md  universal-runtime-phase1.yaml
deployment/: runtime.example.yaml
deployment/compose/: docker-compose.test.yml  docker-compose.yml  haproxy.cfg
deployment/docker/: Dockerfile  docker-compose.blueprint.yml  entrypoint.sh  haproxy.cfg  otel-entrypoint.sh
deployment/kubernetes/: README.md  application-api-deployment.yaml  application-api-service.yaml  configmap.yaml  dispatcher-deployment.yaml  gateway-deployment.yaml  gateway-service.yaml  haproxy-deployment.yaml  haproxy-service.yaml  haproxy.cfg  kustomization.yaml  migration-job.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  projector-deployment.yaml  secret.example.yaml  worker-deployment.yaml
docs/architecture/: PHASE1_ARCHITECTURE.md  REPOSITORY_STRUCTURE.md
docs/decisions/: ADR-001-CONTRACT-FIRST.md  (+2 more)
migrations/: env.py  script.py.mako
prompts/: 00_MASTER_CONTEXT.md  01_BOOTSTRAP_REPOSITORY.md  02_IMPLEMENT_CONTRACTS.md  03_IMPLEMENT_SDK_CORE.md  04_IMPLEMENT_LANGGRAPH_ADAPTER.md  05_IMPLEMENT_GATEWAY_CONFIG_API.md  06_IMPLEMENT_POSTGRES.md  07_IMPLEMENT_KAFKA_DISPATCH.md  08_IMPLEMENT_GRPC_WORKER.md  09_IMPLEMENT_STREAMING_PROJECTOR.md  10_IMPLEMENT_FASTAPI.md  11_IMPLEMENT_A2A.md  12_IMPLEMENT_OBSERVABILITY.md  13_DOCKER_E2E.md  14_COMPATIBILITY_AND_RELEASE.md  15_ASAITK_DEEPAGENT_ACCEPTANCE.md  IMPLEMENTATION_SEQUENCE.md
scripts/: check_architecture.py  compose_down.sh  compose_up.sh  run_e2e.py  test_grpc_docker.py  validate_contracts.py  verify_image.py
services/: __init__.py
templates/: ADR.md
tests/: test_a2a_adapter.py  test_application_deployment_boundaries.py  test_bootstrap.py  test_container_bootstrap.py  test_contracts.py  test_domain_entities.py  test_domain_values.py  test_event_gateway_events.py  test_event_journal.py  test_event_projection.py  test_fastapi_adapter.py  test_fastapi_router_registry.py  test_gateway_api.py  test_grpc_worker.py  test_kafka_dispatch.py  test_kafka_queue.py  test_langgraph_adapter.py  test_managed_execution_service.py  test_ports_and_services.py  test_queue_codec.py  test_sdk_core.py  test_telemetry_bootstrap.py  test_telemetry_prompt12.py  test_worker_leases.py  test_worker_registration_routes.py
(+280 files in other folders)
