[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-runtime"
version = "0.1.0"
description = "Contract-first universal streaming AI runtime"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  "orjson>=3.10",
  "pyyaml>=6.0",
  "jsonschema>=4.23",
  "httpx>=0.27",
  "grpcio>=1.66",
  "grpcio-health-checking>=1.66",
  "protobuf>=5.28",
]

[project.optional-dependencies]
langgraph = [
  "langgraph>=1.0",
  "langgraph-sdk>=0.4",
  "langgraph-checkpoint-postgres>=2.0",
  "langchain>=1.0",
  "deepagents>=0.5",
  "psycopg[binary,pool]>=3.2",
]
fastapi = ["opentelemetry-instrumentation-fastapi>=0.48b0"]
kafka = ["aiokafka>=0.12"]
a2a = ["a2a-sdk[fastapi,grpc,telemetry]>=1.0"]
observability = [
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "opentelemetry-instrumentation>=0.48b0",
  "openlit",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "mypy>=1.12",
  "types-jsonschema>=4.23",
  "types-pyyaml>=6.0",
  "build>=1.2",
  "grpcio-tools>=1.66",
]

[project.scripts]
universal-runtime = "universal_runtime.bootstrap.cli:main"
universal-runtime-gateway = "universal_runtime.services.gateway.main:main"
universal-runtime-dispatcher = "universal_runtime.services.dispatcher.main:main"
universal-runtime-worker = "universal_runtime.services.worker.main:main"
universal-runtime-projector = "universal_runtime.services.event_projector.main:main"
universal-runtime-standalone = "universal_runtime.services.standalone.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
  "compatibility: official LangGraph SDK compatibility",
  "postgres: requires PostgreSQL",
  "kafka: requires Kafka",
  "docker: requires Docker",
  "a2a: A2A compatibility",
]

[tool.coverage.run]
branch = true
source = ["src/universal_runtime"]
omit = ["*/__init__.py", "*/generated/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
exclude = [".tmp", "generated"]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF", "S", "DTZ", "N", "RET"]
ignore = ["S101", "B008", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["yaml.*", "a2a.*", "openlit.*", "aiokafka.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["universal_runtime.adapters.grpc.*", "universal_runtime.adapters.grpc.generated.*", "grpc.*", "grpc_health.*", "google.protobuf.*"]
ignore_errors = true
